# infra

./: K8-CMD.md  README.md
.github/workflows/: clean-ghcr.yml
k3s-setup/: kubeadm-config.yaml  metallb-config.yaml
k8-app/: BUILD.md  Cargo.toml  Dockerfile
k8-bare/: CILIUM.md  HOWTO.md  README.md  cilium-pulaip.yaml
k8-bare/cilium/: README.md  values-cilium-ip-pool.yaml  values.yaml
k8-bare/flannel/: README.md
k8-bare/grafana/: README.md
k8-bare/k8s/: README.md  kubeadm-config.yaml
k8-bare/localstorage/: README.md  local-storage-pv.yaml  local-storage.yaml
k8-bare/longhorn/: README.md  longhorn-ingress.yaml
k8-bare/metallb/: README.md  metallb-l2.yaml  metallb-pool.yaml  test-lb.yaml
k8-bare/nginx-ingress-controller/: README.md  ingress-test.yaml  test-ingress.yaml
k8-tmpl/deployment/: deployment.yaml
k8-tmpl/gateway/: gateway.yaml
k8-tmpl/ingress/: ingress.yaml
k8-tmpl/probes/: pod.yaml
k8-tmpl/service/: clusterip.yaml  loadbalancer.yaml
k8s/: HOWTO.md  README.md  kubeadm-config.yaml  loki-values.yaml  metallb-config.yaml  nginx-service.yaml  prometheus-values.yaml
k8s-howtos/: HOWTO.md  grafana-values-persistence.yaml  grafana-values.yaml  loki-values.yaml
k8s-templates/: KOMENDY.md
k8s-templates/configmap/: configmap.yaml  pod-z-configmap.yaml
k8s-templates/deployment/: deployment.yaml
k8s-templates/myapp/: .env  Cargo.toml  Dockerfile  README.md
k8s-templates/pvc/: pod1.yaml
k8s-templates/replicaset/: myapp-rs.yaml  replicaset.yaml
k8s-templates/secret/: cert.pem  key.pem  (+3 more)
myapp/: Cargo.toml  Dockerfile  pod.yaml
(+4 files in other folders)
