[package]
name = "myapp"
version = "0.1.2"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net"] }
dotenvy = "0.15"
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
